--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
   <!-- Secret Sections (Hidden Initially) -->
   <div id="linkSections" class="hidden px-8 py-6 space-y-8">
     <section>
+      <h3 class="text-2xl font-bold mb-2 text-green-300">🎮 Cheat</h3>
+      <ul class="list-disc list-inside space-y-2 text-green-200">
+        <li><a href="https://shark-software.ru/" target="_blank" class="underline hover:text-green-400">Best cheat for CS 2🔑 >>> This here Config https://t.me/sharkhackcfg⚙</a></li>
+        <li><a href="https://exloader.net/" target="_blank" class="underline hover:text-green-400">Cheat for all online games💾</a></li>
+      </ul>
+    </section>
+    <section>
       <h3 class="text-2xl font-bold mb-2 text-green-300">🔗 Downloads Link</h3>
       <ul class="list-disc list-inside space-y-2 text-green-200">
         <li><a href="https://www.torproject.org/download/" target="_blank" class="underline hover:text-green-400">Tor Browser Download🧅</a></li>
@@ -71,6 +78,10 @@
       <ul class="list-disc list-inside space-y-2 text-green-200">
         <li><a href="https://digtvbg.com/files/books-for-hacking/Black%20Hat%20Python%20-%20Python%20Programming%20for%20Hackers%20and%20Pentesters%20by%20Justin%20Seitz.pdf" target="_blank" class="underline hover:text-green-400">Black Hat Python >>> Python Programming for Hackers and Pentesters by Justin Seitz📕</a></li>
         <li><a href="https://hackershubbooks.web.app/Files/web-hacking-101.pdf" target="_blank" class="underline hover:text-green-400">Web Hacking 101 >>> How to Make Money Hacking ethically📘</a></li>
+        <li><a href="https://dtors.net/Hacking/The%20Art%20of%20Invisibility%202017.pdf" target="_blank" class="underline hover:text-green-400">The Art of Invisibility >>> The World's Most Famous Hacker Teaches You How to Be Safe in the Age of Big Brother and Big Data by Kevin Mitnick📗</a></li>
+        <li><a href="https://theswissbay.ch/pdf/Books/Computer%20science/socialengineering_thescienceofhumanhacking_2ndedition.pdf" target="_blank" class="underline hover:text-green-400">Social Engineering >>> the Art of Human Hacking📙</a></li>
+        <li><a href="https://hackershubbooks.web.app/Files/Hacking-The%20Art%20of%20Exploitation%20(2nd%20ed.%202008)-Erickson.pdf" target="_blank" class="underline hover:text-green-400"></a>Hacking.The.Art.of.Exploitation.2nd.Edition📒</li>
+         <li><a href="https://el.newoutlook.it/download/book/HACKERS-Heroes-of-the-Computer-Revolution.pdf"></a>Hackers Heroes of the Computer Revolution📓</li>
       </ul>
     </section>
     <section>
